--- a/Frontend/App/package.json
+++ b/Frontend/App/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.16.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "express": "^4.17.2",
     "node-sass": "^6.0.1",
     "pixi.js": "^6.2.0",
     "react": "^17.0.2",
@@ -14,6 +15,8 @@
     "react-helmet": "^6.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "socket.io": "^4.4.0",
+    "socket.io-client": "^2.3.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
