--- a/Frontend/App/package.json
+++ b/Frontend/App/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "dependencies": {
     "@pixi/events": "^6.2.0",
+    "@pixi/layers": "^1.0.11",
     "@testing-library/jest-dom": "^5.16.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "express": "^4.17.2",
     "node-sass": "^6.0.1",
+    "pixi-viewport": "^4.34.4",
     "pixi.js": "^6.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -16,7 +18,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "socket.io": "^4.4.0",
-    "socket.io-client": "^2.3.1",
+    "socket.io-client": "^4.4.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
