--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,26 +1,23 @@
-# This is a basic workflow to help you get started with Actions
-
 name: CI
 
-# Controls when the workflow will run
 on:
-  # Allows you to run this workflow manually from the Actions tab
   push:
     branches:
       - main
   workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  test_wrapper:
     runs-on: [self-hosted]
     steps:
-      - name: Build program
-        run: echo Program_Builded
-  test:
-    runs-on: [self-hosted]
-    steps:
-      - name: Test current code 
-        run: echo Program_Tested
+      - name: Checkout
+        uses: actions/checkout@main
+      - name: Set up Python
+        uses: actions/setup-python@main
+        with:
+          python-version: 3.0
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r Backend/requirements.txt
+      - name: Run tests
+        run: python Backend/wrapper_test.py 
