--- a/Frontend/App/package.json
+++ b/Frontend/App/package.json
@@ -4,12 +4,15 @@
   "private": true,
   "dependencies": {
     "@pixi/events": "^6.2.0",
+    "@pixi/filter-ascii": "^4.1.5",
+    "@pixi/filter-outline": "^4.1.5",
     "@pixi/layers": "^1.0.11",
     "@testing-library/jest-dom": "^5.16.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "express": "^4.17.2",
     "node-sass": "^6.0.1",
+    "pixi-filters": "^4.1.6",
     "pixi-viewport": "^4.34.4",
     "pixi.js": "^6.2.0",
     "react": "^17.0.2",
